--- a/src/features/gifsGrid/GifsGrid.module.css
+++ b/src/features/gifsGrid/GifsGrid.module.css
@@ -1,5 +1,10 @@
 .grid {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.gif {
+  flex: 1 0 auto;
+  margin: 0 20px 20px 0;
+  cursor: pointer;
 }
